# backend-habibisFinances

./: .env  Dockerfile  README.md  pyproject.toml
src/: config.py  constants.py  database.py  dependencies.py  main.py
src/auth/: models.py  router.py  services.py
src/presupuesto/: router.py
src/scrapper/: router.py  service.py
src/users/: models.py  router.py  services.py
src/utils/: taskSaveTasas.py
